# STS2AI

./: .env.example  .gitignore  CONTEXT.md  PLAN.md  README.md  pyproject.toml
configs/: broadcast.yaml  control.yaml  env_pool.yaml  train_ppo.yaml
docs/: setup_ubuntu.md
scripts/: check_steam_branch.py  launch_env_pool.sh  smoke_test_bridge.py  start_broadcast.sh  start_control_server.sh  start_training.sh  sts2ctl
src/sts2_ai_stream/: __init__.py  cli.py  config.py  steam.py  timeutil.py
src/sts2_ai_stream/bridge/: __init__.py  client.py
src/sts2_ai_stream/broadcast/: __init__.py  ffmpeg.py
src/sts2_ai_stream/control/: __init__.py  core.py  processes.py  server.py
src/sts2_ai_stream/discord/: __init__.py  reporter.py
src/sts2_ai_stream/env/: __init__.py  action_mask.py
src/sts2_ai_stream/models/: __init__.py  registry.py
src/sts2_ai_stream/spectator/: __init__.py
src/sts2_ai_stream/telemetry/: __init__.py  events.py
src/sts2_ai_stream/training/: __init__.py
tests/: test_action_mask.py  test_control_core.py  test_steam.py  test_telemetry.py
tests/fixtures/: bridge_actions.json  bridge_state.json
