[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sts2-ai-stream"
version = "0.1.0"
description = "Control plane and RL streaming scaffolding for Slay the Spire 2 AI broadcasts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
server = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
sts2ctl = "sts2_ai_stream.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

